# viteezy-v1

backend/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yml  pom.xml
backend/module-archetype/: README.md  pom.xml
backend/scripts/: httpie-answer-full-quiz.sh  (+1 more)
cms/: .gitlab-ci.yml  Dockerfile  package-lock.json  package.json
dashboard/: .gitignore  .htaccess  .rsyncexclude  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json  readme.md  tslint.json
frontend/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.json
iac/: .gitlab-ci.yml  Makefile  gitlab-runner-rbac.yaml  gitlab-runner.yaml  versions.env
order-pdf-processing/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  diagnose.py  docker-compose.development.yml  docker-compose.yml  pyproject.toml  requirements.txt  temp_bkp.json  test.py
order-pdf-processing/docker/development/: ssh_client_rsa_key  ssh_client_rsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
order-pdf-processing/tests/: test_data_feed.py  test_processing.py  test_scheduling.py  test_sftp.py
order-pdf-processing/tests/documents/: Ariadne_Bartels.docx
order-pdf-processing/vop/: __init__.py  __main__.py  card_templating.py  data_feed.py  dirs.py  helpers.py  main.py  pdf_conversion.py  pharma_list.py  processing.py  scheduling.py  sftp.py
order-pdf-processing/vop/cli/: __init__.py  process.py  schedule.py
(+2967 files in other folders)
